<?xml version="1.0" encoding="utf-8"?>
<!--
 * Copyright (C) 2019 Dario Scoppelletti, <http://www.scoppelletti.it/>.
 *
 * Licensed under the Apache License, Version 2.0 (the "License");
 * you may not use this file except in compliance with the License.
 * You may obtain a copy of the License at
 *
 *     http://www.apache.org/licenses/LICENSE-2.0
 *
 * Unless required by applicable law or agreed to in writing, software
 * distributed under the License is distributed on an "AS IS" BASIS,
 * WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
 * See the License for the specific language governing permissions and
 * limitations under the License.
-->
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">
    <com.google.android.material.card.MaterialCardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/it_scoppelletti_spacingHorz"
        android:layout_marginRight="@dimen/it_scoppelletti_spacingHorz"
        android:layout_marginBottom="@dimen/it_scoppelletti_spacingVert">
        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/it_scoppelletti_marginVert"
            android:layout_marginBottom="@dimen/it_scoppelletti_marginVert"
            android:layout_marginLeft="@dimen/it_scoppelletti_marginHorz"
            android:layout_marginRight="@dimen/it_scoppelletti_marginHorz"
            tools:ignore="rtlHardcoded">
            <TextView android:id="@+id/txtMessage"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toTopOf="@id/txtStatusMessage"
                android:singleLine="false"
                style="@style/Widget.Scoppelletti.TextView.PrimaryText"
                tools:text="Message" />
            <TextView android:id="@+id/lblStatusMessage"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintBaseline_toBaselineOf="@id/txtStatusMessage"
                android:text="@string/it_scoppelletti_gms_lbl_statusMessage" />
            <TextView android:id="@+id/txtStatusMessage"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/it_scoppelletti_spacingHorz"
                android:layout_marginTop="@dimen/it_scoppelletti_spacingVert"
                app:layout_constraintLeft_toLeftOf="@id/lblBarrier"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toBottomOf="@id/txtMessage"
                app:layout_constraintBottom_toTopOf="@id/txtStatusCode"
                android:singleLine="false"
                style="@style/Widget.Scoppelletti.TextView.PrimaryText"
                tools:text="Message" />
            <TextView android:id="@+id/lblStatusCode"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintBaseline_toBaselineOf="@id/txtStatusCode"
                android:text="@string/it_scoppelletti_gms_lbl_statusCode" />
            <TextView android:id="@+id/txtStatusCode"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/it_scoppelletti_spacingHorz"
                android:layout_marginTop="@dimen/it_scoppelletti_spacingVert"
                app:layout_constraintLeft_toRightOf="@id/lblBarrier"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toBottomOf="@id/txtStatusMessage"
                app:layout_constraintBottom_toTopOf="@id/txtCanceled"
                style="@style/Widget.Scoppelletti.TextView.PrimaryText"
                tools:text="500" />
            <TextView android:id="@+id/lblCanceled"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintBaseline_toBaselineOf="@id/txtCanceled"
                android:text="@string/it_scoppelletti_gms_lbl_canceled" />
            <TextView android:id="@+id/txtCanceled"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/it_scoppelletti_spacingHorz"
                android:layout_marginTop="@dimen/it_scoppelletti_spacingVert"
                app:layout_constraintLeft_toRightOf="@id/lblBarrier"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toBottomOf="@id/txtStatusCode"
                app:layout_constraintBottom_toTopOf="@id/txtInterrupted"
                style="@style/Widget.Scoppelletti.TextView.PrimaryText"
                tools:text="No" />
            <TextView android:id="@+id/lblInterrupted"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintBaseline_toBaselineOf="@id/txtInterrupted"
                android:text="@string/it_scoppelletti_gms_lbl_interrupted" />
            <TextView android:id="@+id/txtInterrupted"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/it_scoppelletti_spacingHorz"
                android:layout_marginTop="@dimen/it_scoppelletti_spacingVert"
                app:layout_constraintLeft_toRightOf="@id/lblBarrier"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toBottomOf="@id/txtCanceled"
                app:layout_constraintBottom_toTopOf="@id/txtHasResolution"
                style="@style/Widget.Scoppelletti.TextView.PrimaryText"
                tools:text="No" />
            <TextView android:id="@+id/lblHasResolution"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintBaseline_toBaselineOf="@id/txtHasResolution"
                android:text="@string/it_scoppelletti_gms_lbl_hasResolution" />
            <TextView android:id="@+id/txtHasResolution"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/it_scoppelletti_spacingHorz"
                android:layout_marginTop="@dimen/it_scoppelletti_spacingVert"
                app:layout_constraintLeft_toRightOf="@id/lblBarrier"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toBottomOf="@id/txtInterrupted"
                app:layout_constraintBottom_toTopOf="@id/txtClass"
                style="@style/Widget.Scoppelletti.TextView.PrimaryText"
                tools:text="No" />
            <TextView android:id="@+id/lblClass"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintBaseline_toBaselineOf="@id/txtClass"
                android:text="@string/it_scoppelletti_lbl_class" />
            <TextView android:id="@+id/txtClass"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/it_scoppelletti_spacingHorz"
                android:layout_marginTop="@dimen/it_scoppelletti_spacingVert"
                app:layout_constraintLeft_toRightOf="@id/lblBarrier"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toBottomOf="@id/txtHasResolution"
                android:singleLine="false"
                style="@style/Widget.Scoppelletti.TextView.PrimaryText"
                tools:text="java.lang.RuntimeException" />
            <androidx.constraintlayout.widget.Barrier
                android:id="@+id/lblBarrier"
                android:layout_width="@dimen/it_scoppelletti_spacingHorz"
                android:layout_height="wrap_content"
                app:barrierDirection="right"
                app:constraint_referenced_ids="lblStatusMessage,lblStatusCode,lblCanceled,lblInterrupted,lblHasResolution,lblClass" />
        </androidx.constraintlayout.widget.ConstraintLayout>
    </com.google.android.material.card.MaterialCardView>
</FrameLayout>
